--- a/form-and-listing/package.json
+++ b/form-and-listing/package.json
@@ -9,6 +9,7 @@
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
+    "react-redux-form": "^1.16.8",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0"
