--- a/form-and-listing/package.json
+++ b/form-and-listing/package.json
@@ -12,7 +12,8 @@
     "react-redux-form": "^1.16.8",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-form": "^7.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
