--- a/form-and-listing/package.json
+++ b/form-and-listing/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^5.0.7",
     "react-redux-form": "^1.16.8",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
     "redux-form": "^7.3.0",
